<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/userAvatarImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_24dp"
                android:onClick="openUserDetailOnClickAction"
                tools:ignore="ContentDescription" />

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24dp"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/userNameTextView"
                    style="@style/DarkBlueRegularTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textSize="12sp"
                    tools:text="JakeWharton" />

            <TextView
                    android:id="@+id/companyTextView"
                    style="@style/DarkBlueRegularTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textSize="12sp"
                    tools:text="JakeWharton" />

            <TextView
                    android:id="@+id/locationTextView"
                    style="@style/DarkBlueRegularTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textSize="12sp"
                    tools:text="JakeWharton" />

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24dp"
                android:orientation="horizontal"
                android:paddingTop="@dimen/padding_8dp"
                android:paddingBottom="@dimen/padding_12dp">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/publicReposTextView"
                        style="@style/GrayBoldTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_4dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        tools:text="1234" />

                <TextView
                        style="@style/DarkBlueRegularTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/public_repos_text"
                        android:textAlignment="center"
                        android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                <TextView
                        android:id="@+id/followersTextView"
                        style="@style/GrayBoldTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_4dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        tools:text="530" />

                <TextView
                        style="@style/DarkBlueRegularTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers_text"
                        android:textAlignment="center"
                        android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/followingTextView"
                        style="@style/GrayBoldTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_4dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        tools:text="300B" />

                <TextView
                        style="@style/DarkBlueRegularTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following_text"
                        android:textAlignment="center"
                        android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@drawable/view_shadow" />


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.userdetail.UserDetailActivity">


            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/userDetailOtherRepoRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="5"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:orientation="vertical"
                    tools:scrollbars="vertical">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</layout>